Increase threshold to baseline+80, move cake higher to fix text overlap

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 #cake {
   display: block;
   position: relative;
-  margin: -14em auto 0 auto;
+  margin: -18em auto 0 auto;
   transform: scale(1.3);
 }
 
@@ -127,7 +127,7 @@ body {
   font-weight: 300;
   font-style: italic;
   text-align: center;
-  margin-top: 60px;
+  margin-top: 80px;
 }
 .text h1 {
   font-size: 1.4em;
